--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,6 +92,7 @@
         delimiters: [
           {left: "$$", right: "$$", display: true},
           {left: "\\[", right: "\\]", display: true},
+          {left: "\(", right: "\)", display: true},
           {left: "$", right: "$", display: false}
         ]
       });
