--- a/_layouts/solutions.html
+++ b/_layouts/solutions.html
@@ -3,7 +3,14 @@ layout: default
 katex: true
 ---
 
-<h1 style="margin-bottom: 0.25em">{{ page.roman }}. {{ page.chapter_name }}</h1>
+{% assign title = "" %}
+{% if page.section_name %}
+  {% assign title = page.section_name %}
+{% else %}
+  {% assign title = page.chapter_name %}
+{% endif %}
+
+<h1 style="margin-bottom: 0.25em">{{ page.roman }}. {{ title }}</h1>
 <h3 style="color: #444444">Solutions to selected exercises</h3>
 <hr/>
 
