--- a/_layouts/sectioned-book.html
+++ b/_layouts/sectioned-book.html
@@ -3,8 +3,8 @@ layout: default
 katex: true
 ---
 
-<h1>{{ page.book_name }}</h1>
-<h3 style="font-family: Merriweather; font-weight: 100">
+<h1 style="margin-bottom: 0em;">{{ page.book_name }}</h1>
+<h3 style="font-family: 'Crimson Pro'; font-size: 18px; font-weight: 300">
   <i>{{ page.author }}</i>
 </h3>
 <hr/>
