--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ katex: true
 
 <h1 style="margin-bottom: 0.25em">{{ page.post_name }}</h1>
 <h3 style="color: #444444">
-  {{ page.date | date: '%-d %b %Y' }}
+  posted on {{ page.date | date: '%-d %b %Y' }}
 </h3>
 <hr/>
 
