--- a/_assets/css/styles.css
+++ b/_assets/css/styles.css
@@ -188,7 +188,7 @@
 
 /* html: for overall page formatting */
 html {
-  background: white;
+  background: #F5F5F5;
   margin-top: 1em;
   margin-bottom: 1em;
   padding: 0em;
@@ -205,6 +205,7 @@ body {
   font-family: 'Source Sans', 'Open Sans', Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #444444;
+  background: #F5F5F5;
   
   line-height: 1.5em;
   margin: auto;
