--- a/_assets/css/styles.css
+++ b/_assets/css/styles.css
@@ -188,7 +188,7 @@
 
 /* html: for overall page formatting */
 html {
-  background: #F5F5F5;
+  background: #fafafa;
   margin-top: 1em;
   margin-bottom: 1em;
   padding: 0em;
@@ -205,7 +205,7 @@ body {
   font-family: 'Source Sans', 'Open Sans', Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #444444;
-  background: #F5F5F5;
+  background: #fafafa;
   
   line-height: 1.5em;
   margin: auto;
@@ -267,9 +267,9 @@ code.language-plaintext {
   font-family: 'Inconsolata', monospace;
   font-size: 14px;
   padding: 0.2em;
-  border-radius: 4px;
+  border-radius: 2px;
   color: #c7254e;
-  background-color: #f7f7f7;
+  background-color: #f0f0f0;
 }
 div.highlighter-rouge {
   font-family: 'Inconsolata', monospace;
@@ -278,7 +278,7 @@ div.highlighter-rouge {
   padding: 1em 1em 0.1em 1em;
   margin-bottom: 1.25em;
   border-radius: 4px;
-  background-color: #f7f7f7;
+  background-color: #f0f0f0;
 }
 
 /* table: for structured content that is organized into rows/columns */
@@ -345,6 +345,9 @@ img.resize {
 }
 .solution strong {
   font-weight: 700;
+}
+.solution table .katex {
+  font-size: 1.1em !important;
 }
 .solution .katex {
   font-size: 0.9em !important;
